Changelog v5.1.94 (2025-04-08):
- Improved Filtering Significantly

Changelog v5.1.93 (2025-04-06):
- Improved Scraping again
- Improved Filtering again
- Fixed a Setting Label

Changelog v5.1.92 (2025-04-05):
- Fix some small filtering code

Changelog v5.1.91 (2025-04-05):
- Fix Movies for Animetosho
- Improve Animetosho Scraping

Changelog v5.1.90 (2025-04-04):
- Fixed Movies for Nyaa, Local, Cloud

Changelog v5.1.89 (2025-04-04):
- Added Animixplay

Changelog v5.1.88 (2025-04-03):
- Optimized Filtering Code

Changelog v5.1.87 (2025-04-03):
- Improved the crap out of Nyaa Scraping
- Added Function to Filter Out Sources

Changelog v5.1.86 (2025-04-02):
- Fixed Bugs with Scraping
- Improved Animetosho Scraping
- Unknown Seeders have NA

Changelog v5.1.85 (2025-03-31):
- Fixed Bugs with Playlist & Resume times
- Optimized Playback again
- Made Scraping Faster
- Sadly removed Gogo

Changelog v5.1.84 (2025-03-27):
- Small fix to HiAnime

Changelog v5.1.83 (2025-03-26):
- Added Watchlist Migration Script 
- Added Wipe Addon Data Setting
- String Changes to add descriptions soon

Changelog v5.1.82 (2025-03-22):
- Small fixes to Simkl

Changelog v5.1.81 (2025-03-21):
- Recoded Watchlist Sorting
- Added Watchlist Ordering Setting

Changelog v5.1.80 (2025-03-21):
- Fixed some Watchlist Sorting Bugs

Changelog v5.1.79 (2025-03-15):
- Fixed Resolution again

Changelog v5.1.78 (2025-03-15):
- Fixed Resolution with Aniwave and H!Anime

Changelog v5.1.77 (2025-03-14):
- H!Anime does not require Mega Cloud Solver
- Modified Duplicate Sources Function

Changelog v5.1.76 (2025-03-08):
- Added FlareSolverr Support to AnimePahe

Changelog v5.1.75 (2025-03-06):
- Fixed monitor bug

Changelog v5.1.74 (2025-03-04):
- Fixed Freezing and Cache this time

Changelog v5.1.73 (2025-03-01):
- Optimized Player for Embeds
- Fixed Freezing and hopefully Cache with Player

Changelog v5.1.72 (2025-02-28):
- Added Movies, TV shows, TV Shorts Menus
- Added Specials, OVAs, ONAs Menus