@@ -1,3 +1,6 @@
+Changelog v5.1.95 (2025-04-09):
+- Added Season Checking for Filtering
+
 Changelog v5.1.94 (2025-04-08):
 - Improved Filtering Significantly
 
